# nss_directories

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  nss_directories.spec
src/: Makefile.am  generic.c  glibc-parse.c  group.c  parsers.h  passwd.c  protocols.c  services.c  shadow.c  test.c
