AC_INIT(nss_directories,0.6)
AC_CONFIG_SRCDIR([README])
AM_INIT_AUTOMAKE(foreign)
AM_PROG_LIBTOOL
AC_SYS_LARGEFILE
AM_MAINTAINER_MODE
AC_SUBST(VERSION)
AC_SUBST(RELEASE)
AH_BOTTOM([
#define SYSTEM_DATABASE_DIR "/etc"
])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
